# uprocfs

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  configure.ac  version.sh
debian/: README.source  changelog  control  copyright
etc/: Makefile.am  uproc.conf
include/: Makefile.am  generic.h  hash.h  list.h
src/: Makefile.am  uproc.c
tools/: Makefile.am  uproc-config.pl
